force-app/main/default/objects/ProposalTagMapping__mdt/ProposalTagMapping__mdt.object-meta.xml
<CustomObject>
    <description>Configuracao de tags para geracao de proposta via API.</description>
    <label>Proposal Tag Mapping</label>
    <pluralLabel>Proposal Tag Mappings</pluralLabel>
</CustomObject>