force-app/main/default/objects/ProposalTagMapping__mdt/fields/CoverKey__c.field-meta.xml
<CustomField>
    <fullName>CoverKey__c</fullName>
    <label>Cover Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>