force-app/main/default/objects/ProposalTagMapping__mdt/fields/DefaultValue__c.field-meta.xml
<CustomField>
    <fullName>DefaultValue__c</fullName>
    <label>Valor Padrao</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>