force-app/main/default/objects/ProposalTagMapping__mdt/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <label>Formato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RAW</fullName>
                <default>true</default>
                <label>Raw</label>
            </value>
            <value>
                <fullName>DATE_BR</fullName>
                <label>Date BR</label>
            </value>
            <value>
                <fullName>CURRENCY_BR</fullName>
                <label>Currency BR</label>
            </value>
            <value>
                <fullName>DECIMAL_BR</fullName>
                <label>Decimal BR</label>
            </value>
            <value>
                <fullName>INTEGER</fullName>
                <label>Integer</label>
            </value>
            <value>
                <fullName>UPPER</fullName>
                <label>Upper</label>
            </value>
            <value>
                <fullName>LOWER</fullName>
                <label>Lower</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>