force-app/main/default/objects/ProposalTagMapping__mdt/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <label>Tipo de Pagamento</label>
    <length>80</length>
    <type>Text</type>
</CustomField>