force-app/main/default/objects/ProposalTagMapping__mdt/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Obrigatorio</label>
    <type>Checkbox</type>
</CustomField>