force-app/main/default/objects/ProposalTagMapping__mdt/fields/Scenario__c.field-meta.xml
<CustomField>
    <fullName>Scenario__c</fullName>
    <label>Cenario</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>INITIAL</fullName>
                <label>Initial</label>
            </value>
            <value>
                <fullName>PAYMENT_SELECTED</fullName>
                <label>Payment Selected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>