force-app/main/default/objects/ProposalTagMapping__mdt/fields/SourcePath__c.field-meta.xml
<CustomField>
    <fullName>SourcePath__c</fullName>
    <label>Source Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>