force-app/main/default/objects/ProposalTagMapping__mdt/fields/TagKey__c.field-meta.xml
<CustomField>
    <fullName>TagKey__c</fullName>
    <label>Tag Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>